--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
         </main>
         <footer style="text-align: center;">
-            <h6>Son Güncelleme : 19 Kasım 2023 - 8.45 PM</h6>
+            <h6>Son Güncelleme : 19 Kasım 2023 - 8.45 PM (AppID Count : 88585)</h6>
             <a href="https://github.com/hauptkern/steamtrydb" style="color:gray">Kaynak Kodu</a>
         </footer>
     </body>
